# zsm

./: .release-please-config.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  plugin.kdl  zellij.kdl
.github/workflows/: release-please.yml
src/: config.rs  main.rs  new_session_info.rs  state.rs
src/session/: manager.rs  mod.rs  types.rs
src/ui/: components.rs  mod.rs  renderer.rs  theme.rs
src/zoxide/: directory.rs  mod.rs  search.rs
